--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "vercel": "^32.5.5"
   },
   "devDependencies": {
     "@types/node": "20.4.6",
